--- a/source/stylesheets/components/_navbar.scss
+++ b/source/stylesheets/components/_navbar.scss
@@ -8,6 +8,11 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  .avatar {
+  height: 35px;
+  width: 35px;
+  border-radius: 50%;
+  }
 }
 
 /* Logo */
@@ -15,12 +20,6 @@
   height: 50px;
 }
 
-/* User Avatar */
-.navbar-wagon .avatar {
-  height: 35px;
-  width: 35px;
-  border-radius: 50%;
-}
 
 /* Right section */
 .navbar-wagon-right {
@@ -39,10 +38,10 @@
 .navbar-wagon-link {
   color: #616668;
   font-size: 14px;
-}
-.navbar-wagon-link:hover {
+  .navbar-wagon-link:hover {
   color: #da552f;
   text-decoration: none;
+  }
 }
 
 /* Dropdown menu */
