--- a/source/stylesheets/config/_colors.scss
+++ b/source/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
 // For example:
-$red: #EE5F5B;
-$blue: #469AE0;
+$red: #fc1f8c;
+$blue: #7254f5;
 $yellow: #FDB631;
-$orange: #E67E22;
-$green: #32B796;
+$orange: #fec979;
+$green: #d4f5f8;
 $gray: #000000;
 $light-gray: #F4F4F4;
